<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/transparent">

    <!--All Numbers Filter Option-->
    <TextView
        android:id="@+id/tv_all_numbers"
        android:layout_width="match_parent"
        android:layout_height="@dimen/operator_dialog_iv_size"
        android:text="@string/all_numbers_filter_txt"
        android:contentDescription="@string/division"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/orange"
        android:layout_margin="@dimen/vertical_margin_5spd"
        android:background="@drawable/filter_option_border_bg"
        android:foreground="?android:attr/selectableItemBackground"
        android:elevation="@dimen/_30sdp"
        tools:ignore="UnusedAttribute" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--Odd Numbers-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_number_one"
                android:layout_width="@dimen/number_dialog_iv_size"
                android:layout_height="@dimen/number_dialog_iv_size"
                android:src="@drawable/ic_number_1"
                android:contentDescription="@string/number_1"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vertical_margin_5spd"
                android:background="?attr/selectableItemBackgroundBorderless"/>


            <ImageView
                android:id="@+id/iv_number_three"
                android:layout_width="@dimen/number_dialog_iv_size"
                android:layout_height="@dimen/number_dialog_iv_size"
                android:src="@drawable/ic_number_3"
                android:contentDescription="@string/number_3"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vertical_margin_5spd"
                android:background="?attr/selectableItemBackgroundBorderless"/>


            <ImageView
                android:id="@+id/iv_number_five"
                android:layout_width="@dimen/number_dialog_iv_size"
                android:layout_height="@dimen/number_dialog_iv_size"
                android:src="@drawable/ic_number_5"
                android:contentDescription="@string/number_5"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vertical_margin_5spd"
                android:background="?attr/selectableItemBackgroundBorderless"/>


            <ImageView
                android:id="@+id/iv_number_seven"
                android:layout_width="@dimen/number_dialog_iv_size"
                android:layout_height="@dimen/number_dialog_iv_size"
                android:src="@drawable/ic_number_7"
                android:contentDescription="@string/number_7"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vertical_margin_5spd"
                android:background="?attr/selectableItemBackgroundBorderless"/>

            <ImageView
                android:id="@+id/iv_number_nine"
                android:layout_width="@dimen/number_dialog_iv_size"
                android:layout_height="@dimen/number_dialog_iv_size"
                android:src="@drawable/ic_number_9"
                android:contentDescription="@string/number_9"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vertical_margin_5spd"
                android:background="?attr/selectableItemBackgroundBorderless"/>

            <ImageView
                android:id="@+id/iv_number_eleven"
                android:layout_width="@dimen/number_dialog_iv_size"
                android:layout_height="@dimen/number_dialog_iv_size"
                android:src="@drawable/ic_number_11"
                android:contentDescription="@string/number_11"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vertical_margin_5spd"
                android:background="?attr/selectableItemBackgroundBorderless"/>

        </LinearLayout>
        <!--Numbers seven to twelve-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_number_two"
                android:layout_width="@dimen/number_dialog_iv_size"
                android:layout_height="@dimen/number_dialog_iv_size"
                android:src="@drawable/ic_number_2"
                android:contentDescription="@string/number_2"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vertical_margin_5spd"
                android:background="?attr/selectableItemBackgroundBorderless"/>

            <ImageView
                android:id="@+id/iv_number_four"
                android:layout_width="@dimen/number_dialog_iv_size"
                android:layout_height="@dimen/number_dialog_iv_size"
                android:src="@drawable/ic_number_4"
                android:contentDescription="@string/number_4"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vertical_margin_5spd"
                android:background="?attr/selectableItemBackgroundBorderless"/>

            <ImageView
                android:id="@+id/iv_number_six"
                android:layout_width="@dimen/number_dialog_iv_size"
                android:layout_height="@dimen/number_dialog_iv_size"
                android:src="@drawable/ic_number_6"
                android:contentDescription="@string/number_6"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vertical_margin_5spd"
                android:background="?attr/selectableItemBackgroundBorderless"/>

            <ImageView
                android:id="@+id/iv_number_eight"
                android:layout_width="@dimen/number_dialog_iv_size"
                android:layout_height="@dimen/number_dialog_iv_size"
                android:src="@drawable/ic_number_8"
                android:contentDescription="@string/number_8"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vertical_margin_5spd"
                android:background="?attr/selectableItemBackgroundBorderless"/>

            <ImageView
                android:id="@+id/iv_number_ten"
                android:layout_width="@dimen/number_dialog_iv_size"
                android:layout_height="@dimen/number_dialog_iv_size"
                android:src="@drawable/ic_number_10"
                android:contentDescription="@string/number_10"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vertical_margin_5spd"
                android:background="?attr/selectableItemBackgroundBorderless"/>

            <ImageView
                android:id="@+id/iv_number_twelve"
                android:layout_width="@dimen/number_dialog_iv_size"
                android:layout_height="@dimen/number_dialog_iv_size"
                android:src="@drawable/ic_number_12"
                android:contentDescription="@string/number_12"
                android:layout_gravity="center"
                android:layout_margin="@dimen/vertical_margin_5spd"
                android:background="?attr/selectableItemBackgroundBorderless"/>
        </LinearLayout>
    </LinearLayout>




</LinearLayout>