<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_filter_operators"
        android:icon="@drawable/ic_filter_list"
        android:orderInCategory="101"
        android:title="@string/operator_filter"
        app:showAsAction="always"
        android:visible="true"
        android:enabled="true"
        />

    <item
        android:id="@+id/action_filter_number"
        android:icon="@drawable/ic_filter_alt"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:visible="true"
        android:enabled="true"
        android:title="@string/number_filter" />

    <item
        android:id="@+id/action_filter_clear"
        android:icon="@drawable/ic_clear"
        android:orderInCategory="99"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:enabled="true"
        android:title="@string/clear_filter" />

</menu>